-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.8.0-beta2
-
Windows host, NDK r18b
-
-
1d683dcc0730eecdf1054ecc7cbe86695bae3f1d (qt-creator/qt-creator/4.8)
With an armv8 Kit (5.12 beta4) I get a build error with NDK r18b:
clang+.exe: error: no such file or directory: 'C:\Android\android-ndk-r18b/sources/cxx-stl/llvm-libc/libs/arm64-v8a/libc+.so.16'
... because the toolchain detection sets ANDROID_NDK_PLATFORM to android-16, which only works for armv7 with NDKr18 but not with armv8.
Changing the environment variable to a higher value in the project settings fixes the build for me - android-21 is the first that works.
Qt Creator should automatically set a value which works for building the project.
I used the latest snapshot build (2609 for Qt Creator 4.8.0 rc-1) to test this.
This issue resulted from my comment in QTCREATORBUG-21518.